Tela Cadastro de produto

--- a/Cadastro do Usuario/register.html
+++ b/Cadastro do Usuario/register.html
@@ -23,28 +23,32 @@
     <header> 
         <nav id="head">
         <img class="left-logo" id="Calafate" src="img/calafate-logo.svg" alt="Calafate Logo">
-        </nav>
+    </nav> 
+    </header>
+    <main>
+        <form>           
             <div class="container">
                 <label for="email">Email:</label>
-                  <input type="email" name="email" id="email">
-                  <label for="senha">Senha:</label>
-                     <div id="pass">               
-                     <input type="password" id="passw">         
-                     <i class="bi bi-eye-fill" id="btn-pass" onclick="showPass()"> </i>                                       
-                     <p>Ao clicar em "Criar uma conta" ou ao se registrar, você concorda com as <br>
-                     Condições de
-                     uso e a Política de Privacidade.</p>
-                         <div id="panel">
-                             <div id="botton">
-                                 <p> Criar uma conta </p>
-                             </div>
-                             <p class="entrar">Já tem uma conta? </p>
-                             <a id="login" href="login.html" class="entrar"> Entrar.</a>
-                         </div>
-            
-                     </div>
-           </div>
-    </header>
+                <input type="email" name="email" id="email">
+                <label for="senha">Senha:</label>
+                <div id="pass">               
+                    <input type="password" id="passw">         
+                    <i class="bi bi-eye-fill" id="btn-pass" onclick="showPass()"> </i>                                       
+                    <p>Ao clicar em "Criar uma conta" ou ao se registrar, você concorda com as <br>
+                    Condições de
+                    uso e a Política de Privacidade.</p>
+                        <div id="panel">
+                                <div id="botton">
+                                <p> Criar uma conta </p>
+                                </div>
+                            <p class="entrar">Já tem uma conta? </p>
+                            <a id="login" href="login.html" class="entrar"> Entrar.</a>
+                        </div>
+    
+                </div>
+            </div>
+        </form>
+    </main>
     <script src="showPass.js"></script>
 </body>
 
