--- a/Cadastro do Usuario/login.html
+++ b/Cadastro do Usuario/login.html
@@ -33,32 +33,36 @@
     <header> 
         <nav id="head">
         <img class="left-logo" id="Calafate" src="img/calafate-logo.svg" alt="Calafate Logo">
-        </nav>
+        </nav>          
+    </header>
+    <main>
+        <form>
             <div class="container">
                 <label for="email">Email:</label>
-                  <input type="email" name="email" id="email">
-                  <label for="senha">Senha:</label>
-                     <div id="pass">               
-                     <input type="password" id="passw">         
-                     <i class="bi bi-eye-fill" id="btn-pass" onclick="showPass()"> </i>                                       
-                     <div id="remember">
+                <input type="email" name="email" id="email">
+                <label for="senha">Senha:</label>
+                    <div id="pass">               
+                    <input type="password" id="passw">         
+                    <i class="bi bi-eye-fill" id="btn-pass" onclick="showPass()"> </i>                                       
+                    <div id="remember">
                         <input type="checkbox">
                         Lembre-se de mim 
 
-                     </div>
-                         <div id="panel">
-                             <div id="botton">                                
-                                 <p>Entrar</p>
-                             </div>
-                             <p class="forgotpass">Esqueceu sua senha?</p>
+                    </div>
+                        <div id="panel">
+                            <div id="botton">                                
+                                <p>Entrar</p>
+                            </div>
+                            <p class="forgotpass">Esqueceu sua senha?</p>
 
-                             <p class="login">Não tem uma conta? </p>
-                             <a id="login" href="register.html" class="login"> Cadastrar.</a>
-                         </div>
+                            <p class="login">Não tem uma conta? </p>
+                            <a id="login" href="register.html" class="login"> Cadastrar.</a>
+                        </div>
             
-                     </div>
-           </div>
-    </header>
+                    </div>
+        </div>
+        </form>
+    </main>
     <script src="showPass.js"></script>
 </body>
 
