divs alteradas para button

--- a/Cadastro do Usuario/login.html
+++ b/Cadastro do Usuario/login.html
@@ -50,9 +50,9 @@
 
                     </div>
                         <div id="panel">
-                            <div id="botton">                                
+                            <button id="botton">                                
                                 <p>Entrar</p>
-                            </div>
+                            </button>
                             <p class="forgotpass">Esqueceu sua senha?</p>
 
                             <p class="login">Não tem uma conta? </p>
