--- a/Cadastro do Usuario/register.html
+++ b/Cadastro do Usuario/register.html
@@ -38,9 +38,9 @@
                     Condições de
                     uso e a Política de Privacidade.</p>
                         <div id="panel">
-                                <div id="botton">
+                                <button id="botton">
                                 <p> Criar uma conta </p>
-                                </div>
+                                </button>
                             <p class="entrar">Já tem uma conta? </p>
                             <a id="login" href="login.html" class="entrar"> Entrar.</a>
                         </div>
