--- a/Cadastro do Usuario/registerWork.html
+++ b/Cadastro do Usuario/registerWork.html
@@ -52,18 +52,18 @@
                     <div id="table">                        
                         <div id="colun1">
                             <lable for="workImage">*Imagem da obra</lable>
-                            <div id="selectFile">
+                            <button id="selectFile">
                                 <p>Selecionar arquivo</p>
-                            </div>
+                            </button>
                             <lable for="workName">*Nome da obra</lable>
                             <input type="text" name="nomeDaObra" id="workName">
                             <lable for="dimenssion">*Dimensão</lable>
                             <input type="text" name="Dimensao" id="dimension">
                             <lable for="description">*Descrição</lable>
                             <textarea></textarea>
-                            <div id="send">
+                            <button id="send">
                                 <p>Enviar</p>
-                            </div>
+                            </button>
                             
                         </div>
                         <div id="colun2">
