tela do produto, faltam as barrinhas apenas

--- a/Cadastro do Usuario/register.html
+++ b/Cadastro do Usuario/register.html
@@ -34,11 +34,11 @@
                 <div id="pass">               
                     <input type="password" id="passw">         
                     <i class="bi bi-eye-fill" id="btn-pass" onclick="showPass()"> </i>                                       
-                    <p>Ao clicar em "Criar uma conta" ou ao se registrar, você concorda com as <br>
+                    <p id="terms">Ao clicar em "Criar uma conta" ou ao se registrar, você concorda com as <br>
                     Condições de
                     uso e a Política de Privacidade.</p>
                         <div id="panel">
-                                <button id="botton">
+                                <button id="createacount">
                                 <p> Criar uma conta </p>
                                 </button>
                             <p class="entrar">Já tem uma conta? </p>
