Indenpedencia do style.css

--- a/Cadastro do Usuario/portfolio.html
+++ b/Cadastro do Usuario/portfolio.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
 
     <!--CSS-->
-    <link rel="stylesheet" href="/Cadastro do Usuario/style.css">
+    <!--<link rel="stylesheet" href="/Cadastro do Usuario/style.css">-->
     
     <!--CSS-do-Portfolio-->
     <link rel="stylesheet" href="css/portfolio.css">
