Atualização da tela "Central de ajuda"

--- a/Cadastro do Usuario/central.html
+++ b/Cadastro do Usuario/central.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ com slideToggle</title>
+    <title>Central de ajuda</title>
     <link rel="stylesheet" href="/Calafate/Cadastro do Usuario/css/style3.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="src/scriptCA.js"></script>
@@ -28,6 +28,19 @@
                 <img src="img/perfil-logo.svg" alt="Profile Icon">
             </div>
         </nav>
+        <footer>
+            <nav>
+                <a id="paints" href="#">Pinturas</a>
+                <a href="#"> Esculturas</a>
+                <a href="#">Fotografias </a>
+                <a href="#"> Desenhos </a>
+                <a href="#"> Impressões e Gravuras</a>
+                <a href="#"> Artes Digitais</a>
+                <a href="#"> Colagens</a>
+                <a href="#"> Artes Têxtil</a>
+                <a href="#"> Design</a>
+            </nav>
+        </footer>
     </header>
 
     <div class="title">
